2009-04-20  Alberto Garcia  <agarcia@igalia.com>

	* examples/hildon-progress-indicator-example.c: Fix example

	* src/hildon-gtk.c (set_clear_window_flag)
	(hildon_gtk_window_set_progress_indicator):
	Create a generic function for setting flags to a window.
	Use GDK instead of direct Xlib calls.

2009-04-14  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c (hildon_button_set_arrangement):
	Due to NB#88126, if one of the labels is too long it will be
	painted outside the button. The 'value' label is more likely to be
	the longest one, so we change its packing options in order to
	truncate it if necessary. As a side effect, the 'title' label will
	no longer be truncated.

	Fixes: NB#110689 (HildonPickerButton doesn't ellipsize very long values)

2009-04-14  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.64]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-04-13  Alejandro G. Castro  <alex@igalia.com>

	Deprecation of the hildon_pannable_area_set_size_request_policy
	API, the only policy properly supported in gtk+ nowadays is the
	minimum size.

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_size_request): Added a workaround for the
	size_request to avoid the problems of huge pixmaps in case someone
	is still using the function.
	* src/hildon-pannable-area.h: Deprecated the enum with the
	policies.

	Fixes: NB#110244 (Problems with the
	hildon_pannable_area_set_size_request_policy API)

2009-04-08  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_init),
	(hildon_pannable_area_size_request),
	(hildon_pannable_area_style_set),
	(hildon_pannable_draw_vscroll),
	(hildon_pannable_draw_hscroll),
	(hildon_pannable_area_check_scrollbars): Replaced area_width with
	indicator_width to clarify the use of the attribute.

2009-04-08  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.62]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.
