@@ -1,5 +1,14 @@
 2009-04-20  Alberto Garcia  <agarcia@igalia.com>
 
+	* src/hildon-gtk.h
+	* src/hildon-gtk.c
+	(+hildon_gtk_window_set_do_not_disturb):
+	New API to set the do-not-disturb flag.
+
+	Fixes: NB#110959 (Add API to set the do-not-disturb flag to a window)
+
+2009-04-20  Alberto Garcia  <agarcia@igalia.com>
+
 	* examples/hildon-progress-indicator-example.c: Fix example
 
 	* src/hildon-gtk.c (set_clear_window_flag)
